# SPT2025B

./: .gitignore  .replit  .spt_settings.json  0.12.0  0.13.0  0.14.0  0.21.0  1.10.0  1.24.0  1.28.0  1.3.0  10.0.0  2.0.0  3.1.0  3.7.0  4.8.0  4.9.0  5.15.0  ADVANCED_ANALYSIS_INTEGRATION_SUMMARY.md  ADVANCED_TRAJECTORY_ANALYSIS_GUIDE.md  ALL_BUG_FIXES_COMPLETE.md  ALL_LIST_FIGURE_FIXES_SUMMARY.md  ANALYSIS_CATALOG.md  BATCH_REPORT_ENHANCEMENT_SUMMARY.md  BIAS_CORRECTION_IMPLEMENTATION.md  BUG_FIX_SESSION_OCT8_2025.md  CHANGELOG.md  CHANNEL_CORRELATION_FIX.md  CODE_REVIEW_EXECUTIVE_SUMMARY.md  CODE_REVIEW_IMPROVEMENTS.md  CODE_REVIEW_SUMMARY.md  COMPARATIVE_GROUP_ANALYSIS_IMPLEMENTATION.md  COMPLETE_MODULAR_ARCHITECTURE.md  COMPLETE_SESSION_SUMMARY.md  CRITICAL_ISSUES_RESOLVED.md  DEEPTRACK_IMPORT_FIX.md  EXECUTIVE_SUMMARY_IMPROVEMENTS.md  FEATURE_IMPLEMENTATION_STATUS.md  FINAL_INTEGRATION_SUMMARY.md  FINAL_SESSION_SUMMARY.md  (+188 more)
.github/: copilot-instructions.md
.streamlit/: config.toml
cellpose/: models.py
docs/: CHANGELOG.md
external_simulators/: nuclear_diffusion_si_adapter.py
page_modules/: __init__.py  advanced_analysis_page.py  ai_anomaly_detection_page.py  analysis_page.py  data_loading_page.py  home_page.py  image_processing_page.py  md_integration_page.py  project_management_page.py  report_generation_page.py  simulation_page.py  tracking_page.py  visualization_page.py
pages/: 02_Biophysical_Models.py  03_Advanced_Biophysics.py  06_Phase_Comparison.py  07_Synthetic_Lab.py  advanced_analysis.py  analysis.py  anomaly_detection_page.py  data_loading.py  home.py  image_processing.py  md_integration.py  project_management.py  report_generation_page.py  simulation_page.py  tracking.py  visualization.py
sample_data/: Cell1_spots.csv  Cell2_spots.csv  Cropped_cell3_spots (1).csv  Cropped_spots.csv  MS2_spots_F1C1.csv
scripts/: generate_sample_data.py  generate_synthetic_analysis_validation.py  report_health_check.py  run_app.py  run_synthetic_regression.py  test_enhanced_analysis.py  test_intensity_fix.py  test_new_libraries_with_data.py  test_sample_data.py  test_sample_data_final.py
segment_anything/: __init__.py
spt2025b/: __init__.py
spt_projects/: 560c06e9-67a1-44e8-8613-bcf12c4e53b7.json  5a51b972-a3ce-418d-85be-cdb1ca622a6d.json  98b9f17d-f1a6-4f4e-b57a-5a2b78015457.json  caba096f-15a3-4e5f-918d-861e6dd9a812.json  ec6390b1-216e-472d-8c55-56b8727037a0.json
tests/: test_advanced_biophysics_complete.py  test_advanced_segmentation.py  test_advanced_trajectory_analysis.py  test_all_bug_fixes_comprehensive.py  test_all_list_figure_fixes.py  test_analysis.py  test_analysis_formulas.py  test_app_logic.py  test_bayesian_backends.py  test_biased_inference.py  test_biophysical_corrected.py  test_comparative_reports.py  test_data_pooling.py  (+25 more)
(+133 files in other folders)
