[project]
name = "spt-analysis-2025b"
version = "0.1.0"
description = "Single Particle Tracking Analysis Platform - Comprehensive biophysical research tools"
requires-python = ">=3.11,<3.13"
dependencies = [
    "streamlit>=1.28.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<3.0.0",
    "plotly>=5.15.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "scikit-image>=0.21.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "networkx>=3.1",
    "h5py>=3.9.0",
    "xmltodict>=0.13.0",
    "lxml>=4.9.0",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "pywavelets>=1.4.0",
    "hmmlearn>=0.3.0",
    "pingouin>=0.5.3",
    "reportlab>=4.0.4",
    "trackpy>=0.6.0",
]

[project.optional-dependencies]
ml = [
    "hmmlearn>=0.3.0",
    "tensorflow>=2.15.0",
    "emcee>=3.1.0",
    "arviz>=0.18.0",
]
tracking = [
    "trackpy>=0.6.0",
    "numba>=0.60.0",
]
reports = [
    "reportlab>=4.0.0",
    "fpdf2>=2.7.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "fbm>=0.3.0",
]
full = ["spt-analysis-2025b[ml,tracking,reports,dev]"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["spt2025b*"]
